# audio-network-interface

./: .gitignore  Cargo.toml  README.md  UsageInstructions.md  index.html  wasm_main-35a042f6c610de910d05fc9b146d97f16130144af95049c615fbe1f1d07418854532000898171407b71de25cc73031f6.js  wasm_main-35a042f6c610de910d05fc9b146d97f16130144af95049c615fbe1f1d07418854532000898171407b71de25cc73031f6_bg.wasm  wasm_main-495e1fe6835089eb.js  wasm_main-495e1fe6835089eb_bg.wasm  wasm_main-4d55cea8e8a75ff8.js  wasm_main-4d55cea8e8a75ff8_bg.wasm  wasm_main-64a6d16c02b748fe.js  wasm_main-64a6d16c02b748fe_bg.wasm  wasm_main-7021dcd376bb616f.js  wasm_main-7021dcd376bb616f_bg.wasm  wasm_main-989c5c7dfd28a85c.js  wasm_main-989c5c7dfd28a85c_bg.wasm  wasm_main-b2c46f6d253a7fc6.js  wasm_main-b2c46f6d253a7fc6_bg.wasm  wasm_main-e566e76ff223dd00.js  wasm_main-e566e76ff223dd00_bg.wasm  wasm_main-fde93f7b1b54b306.js  wasm_main-fde93f7b1b54b306_bg.wasm
.github/workflows/: pages.yml
crates/audio_network_interface/: Cargo.toml
crates/audio_network_interface/benches/: audio_event_loop.rs
crates/audio_network_interface/examples/: plot_f_vs_t.rs  plot_file_fft.rs  record_wav.rs  spectogram.rs
crates/audio_network_interface/proptest-regressions/: tests.txt
crates/audio_network_interface/src/: args.rs  binary_logic.rs  constants.rs  file_io.rs  plotting.rs  tests.rs  transmit.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: bit_byte_conversion.rs  carrier_modulation.rs  correlation.rs  lib.rs  ofdm.rs  ook_fdm.rs  specs.rs
crates/dsp/src/ofdm/: pseudo_random_noise.rs
crates/dsp/tests/: ofdm.rs  ook_fdm.rs
crates/fec/: Cargo.toml
crates/fec/examples/: reed_sol_test.rs
crates/fec/src/: hamming.rs  lib.rs  parity.rs  reed_solomon.rs  traits.rs
crates/iterator_adapters/: Cargo.toml
crates/iterator_adapters/src/: bit_to_byte.rs  chunks.rs  lib.rs  mean.rs  median.rs  order_statistics.rs  remove_preceding.rs  windows.rs
crates/main_crate/: Cargo.toml
crates/main_crate/benches/: audio_event_loop.rs
crates/main_crate/examples/: plot_f_vs_t.rs  plot_file_fft.rs  spectogram.rs
crates/main_crate/proptest-regressions/: tests.txt
crates/main_crate/src/: about.md  args.rs  binary_logic.rs  constants.rs  file_io.rs  lib.rs  plotting.rs  receive.rs  tests.rs  transmit.rs
crates/main_crate/tests/: scratch.rs
crates/stft/: Cargo.toml
crates/stft/src/: fft.rs  lib.rs  tests.rs
src/: main.rs  transmit.rs
