[package]
name = "audio_network_interface"
version = "0.2.0"
authors = ["Easyoakland <97992568+Easyoakland@users.noreply.github.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Transmit data over audio."
repository = "https://github.com/Easyoakland/audio-network-interface"

[[example]]
name = "record_wav"

[[example]]
name = "plot_file_fft"
required-features = ["plot"]

[[example]]
name = "plot_f_vs_t"
required-features = ["plot"]

[[example]]
name = "spectogram"
required-features = ["plot"]

[[bin]]
name = "comparison"

[[bin]]
name = "analyze_wav"
required-features = ["plot"]

[[bin]]
name = "transceiver_cli"

[[bin]]
name = "transceiver_gui"
required-features = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bitvec = "1.0.1"
clap = { version = "4.1.13", features = ["derive"] }
dsp = { path = "../dsp" }
dyn-clone = "1.0.11"
eframe = { version = "0.22.0", features = ["glow"], optional = true }
fec = { path = "../fec" }
fixedbitset = "0.4.2"
hound = "3.5.0"
iterator_adapters = { path = "../iterator_adapters" }
klask = { git = "https://github.com/Easyoakland/klask", version = "1.0.0", optional = true }
log = "0.4.17"
num-complex = "0.4.3"
num-traits = "0.2.15"
stft = { path = "../stft" }
thiserror = "1.0.40"

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15.1"
futures-lite = "1.13.0"
plotters = { version = "0.3.4", optional = true }
simple_logger = "4.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.15.1", features = ["wasm-bindgen"] }
rfd = "0.12"

[dev-dependencies]
criterion = "0.5.1"
ordered-float = "3.6.0"
proptest = "1.1.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[features]
default = []
plot = ["dep:plotters"]
gui = ["dep:klask", "dep:eframe"]

[[bench]]
name = "audio_event_loop"
harness = false
