[package]
name = "fec"
version = "0.1.0"
authors = ["Easyoakland <97992568+Easyoakland@users.noreply.github.com>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/Easyoakland/audio-network-interface"

[[example]]
name = "reed_sol_test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
itertools = "0.10.5"
log = "0.4.17"
nalgebra = "0.32.2"
reed-solomon-erasure = "6.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cached = "0.44.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cached = { version = "0.44.0", features = ["wasm"] }

[dev-dependencies]
proptest = "1.1.0"
