[package]
name = "audio_network_interface"
version = "0.1.0"
edition = "2021"

[[example]]
name = "record_wav"

[[example]]
name = "plot_file_fft"
required-features = ["plot"]

[[example]]
name = "plot_f_vs_t"
required-features = ["plot"]

[[example]]
name = "spectogram"
required-features = ["plot"]

[[bin]]
name = "comparison"

[[bin]]
name = "transceiver_cli"

[[bin]]
name = "transceiver_gui"
required-features = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"
ordered-float = "3.6.0"
proptest = "1.1.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[dependencies]
anyhow = "1.0.70"
bitvec = "1.0.1"
clap = { version = "4.1.13", features = ["derive"] }
cpal = "0.15.1"
dsp = { path = "../dsp" }
dyn-clone = "1.0.11"
eframe = { version = "0.22.0", features = ["glow"] }
fec = { path = "../fec" }
fixedbitset = "0.4.2"
hound = "3.5.0"
iterator_adapters = { path = "../iterator_adapters" }
klask = { git = "https://github.com/Easyoakland/klask", version = "1.0.0", optional = true }
log = "0.4.17"
num-complex = "0.4.3"
num-traits = "0.2.15"
plotters = { version = "0.3.4", optional = true }
simple_logger = "4.1.0"
stft = { path = "../stft" }
thiserror = "1.0.40"

[features]
default = []
plot = ["dep:plotters"]
gui = ["dep:klask"]

[[bench]]
name = "audio_event_loop"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
