[package]
name = "stft"
version = "0.1.0"
authors = ["Easyoakland <97992568+Easyoakland@users.noreply.github.com>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/Easyoakland/audio-network-interface"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
derive_more = "0.99.17"
log = "0.4.17"
realfft = "3.2.0"

[dev-dependencies]
proptest = "1.1.0"
